--- a/hw-acceptance-unit-test-cycle/rottenpotatoes/app/views/movies/show.html.haml
+++ b/hw-acceptance-unit-test-cycle/rottenpotatoes/app/views/movies/show.html.haml
@@ -18,5 +18,7 @@
 %p#description= @movie.description
 
 = link_to 'Edit', edit_movie_path(@movie)
+%br
+= link_to 'Find Movies With Same Director', :controller => "movies", :action => "same_director", :director => @movie.director
 = button_to 'Delete', movie_path(@movie), :method => :delete, :confirm => 'Are you sure?'
 = link_to 'Back to movie list', movies_path
