--- a/hw-acceptance-unit-test-cycle/rottenpotatoes/app/views/movies/same_director.haml
+++ b/hw-acceptance-unit-test-cycle/rottenpotatoes/app/views/movies/same_director.haml
@@ -1,7 +1,5 @@
-
-%h2 Showing Movies of #{@movie.director}
-%ul#directors
-  %li
-    Movies:
-    = @movie.title
-
+%h2 Similar Movies of this Director:
+%ul
+  - @movie.each do |i|
+    %li
+      = i.title
