--- a/hw-acceptance-unit-test-cycle/rottenpotatoes/app/views/movies/show.html.haml
+++ b/hw-acceptance-unit-test-cycle/rottenpotatoes/app/views/movies/show.html.haml
@@ -9,6 +9,7 @@
   %li
     Released on:
     = @movie.release_date.strftime("%B %d, %Y")
+- if  @movie.director     
   %li
     Director:
     = @movie.director
@@ -19,6 +20,9 @@
 
 = link_to 'Edit', edit_movie_path(@movie)
 %br
-= link_to 'Find Movies With Same Director', :controller => "movies", :action => "same_director", :director => @movie.director
+- if @movie.director
+  = link_to "Find Movies With Same Director", controller: "movies", action: "same_director", director: @movie.director 
+- else
+  = link_to "Find Movies With Same Director", movies_path
 = button_to 'Delete', movie_path(@movie), :method => :delete, :confirm => 'Are you sure?'
 = link_to 'Back to movie list', movies_path
